--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %X{clientIp} %X{username} %X{merchantName} %-5p %c{1}:%L - %m%n
 # Log everything. Good for troubleshooting
 log4j.logger.org.hibernate=INFO
-log4j.logger.org.springframework=DEBUG
+log4j.logger.org.springframework=INFO
 #log4j.logger.org.hibernate.SQL=DEBUG
 # Log all JDBC parameters
 #log4j.logger.org.hibernate.type=ALL
